--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
+    "ipfs-http-client": "^47.0.1",
     "mocha": "^8.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
